--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "mdbreact": "^4.11.0",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.4"
+    "react-panels": "^2.5.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.4",
+    "react-simple-card": "^1.0.11",
+    "react-sticky-footer": "0.1.0-rc3",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +31,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react-router-dom": "^4.3.1"
+  }
 }
