--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.2",
     "mdbreact": "^4.11.0",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.1",
     "react-panels": "^2.5.1",
     "react-router": "^4.3.1",
@@ -15,7 +17,8 @@
     "react-scripts": "2.1.4",
     "react-simple-card": "^1.0.11",
     "react-sticky-footer": "0.1.0-rc3",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
